--- a/static/highlight.css
+++ b/static/highlight.css
@@ -20,6 +20,9 @@
 .highlight-block pre {
     margin: 0;
     padding: 0.5rem 0.15rem 0.5rem 0;
+    
+    cursor: default;
+    user-select: none;
 }
 
 .highlight {
