--- a/templates/macros.html
+++ b/templates/macros.html
@@ -80,10 +80,10 @@
 {% macro breadcrumbs() %}
 
 <div class="breadcrumbs">
-    {% for name, link in g.bc.links %}
+    {% for name, link in g.breadcrumbs.links %}
         {% if not loop.last %}
             / <a href="{{ link }}">{{ name }}</a>
-        {% elif g.bc.is_not_found %}
+        {% elif g.breadcrumbs.is_not_found %}
             / <s>{{ name }}</s>
         {% else %}
             / {{ name }}
