--- a/templates/error.html
+++ b/templates/error.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{%- extends "base.html" -%}
 
-{% block title %}
+{%- block title -%}
 error {{ error.code }}
-{% endblock %}
+{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 
 <div class="centered">
     <h3 class="text-block">
@@ -15,4 +15,4 @@ error {{ error.code }}
     </video>
 </div>
 
-{% endblock %}
+{%- endblock -%}
