--- a/templates/not_found_error.html
+++ b/templates/not_found_error.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{%- extends "base.html" -%}
 
-{% block title %} page not found {% endblock %}
+{%- block title -%} page not found {%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 
 <div class="centered">
     <h3 class="text-block">
@@ -13,4 +13,4 @@
     </video>
 </div>
 
-{% endblock %}
+{%- endblock -%}
