--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
 
 <head>
     <title> sliva0.tk - {%- block title -%}{%- endblock -%} </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
 
     <link rel="stylesheet" type="text/css" href="/static/base.css">
     <link rel="stylesheet" type="text/css" href="/static/themes.css">
@@ -19,8 +20,11 @@
     <link {{ o('use_hl') }} rel="stylesheet" type="text/css" href="/static/highlight.css">
     <link {{ o('extra_css') }} rel="stylesheet" type="text/css" href="/static/extra.css">
 
-    {%- if g.use_js -%} <script src="/static/script.js"></script> {%- endif -%}
-    {%- block head -%}{%- endblock -%}
+    {%- if g.use_js -%} 
+        <script src="/static/script.js"></script>
+    {%- endif -%}
+
+    {%- block head -%} {%- endblock -%}
 </head>
 
 <body class="use-theme {{ get_theme_type() }}">
