--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,4 +1,5 @@
 /* Source: https://github.com/JetBrains/JetBrainsMono/issues/96#issuecomment-583736088 */
+/* Specific css: https://dev-cats.github.io/code-snippets/JetBrainsMono.css */
 
 @font-face {
     font-family: "JetBrains Mono";
@@ -22,6 +23,7 @@
     src: url(https://fonts.gstatic.com/s/roboto/v29/KFOmCnqEu92Fr1Mu5mxKOzY.woff2) format('woff2');
     unicode-range: U+0400-052F, U+1C80-1C88, U+20B4, U+2116, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
+
 /* latin */
 @font-face {
     font-family: 'Roboto';
@@ -33,4 +35,14 @@
         U+0000-024F, U+0131, U+0152-0153, U+0259, U+02BB-02BC, U+02C6,
         U+02DA, U+02DC, U+1E00-1EFF, U+2000-20CF, U+2113, U+2122, U+2191,
         U+2193, U+2212, U+2215, U+2C60-2C7F, U+A720-A7FF, U+FEFF, U+FFFD;
+}
+
+
+/* Source: https://fonts.google.com/icons */
+/* Specific css: https://fonts.googleapis.com/icon?family=Material+Icons+Round */
+@font-face {
+    font-family: 'Material Icons Round';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialiconsround/v99/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmP.woff2) format('woff2');
 }
