--- a/templates/error.html
+++ b/templates/error.html
@@ -11,7 +11,7 @@ error {{ error.code }}
         Error {{ error.code }} occured: <br> {{ error.description }}
     </h3>
     <video autoplay muted loop style="width: 75%">
-        <source src="/static/dog_cube.webm" type='video/webm'>
+        <source src="/static/media/dog_cube.webm" type='video/webm'>
     </video>
 </div>
 
