--- a/templates/not_found_error.html
+++ b/templates/not_found_error.html
@@ -9,7 +9,7 @@
         This page has been moved, deleted, <br> hasn't been completed yet or never existed
     </h3>
     <video autoplay muted loop style="width: 75%">
-        <source src="/static/dog.webm" type='video/webm'>
+        <source src="/static/media/dog.webm" type='video/webm'>
     </video>
 </div>
 
