--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -39,10 +39,10 @@
 
 
 /* Source: https://fonts.google.com/icons */
-/* Specific css: https://fonts.googleapis.com/icon?family=Material+Icons+Round */
+/* Specific css: https://fonts.googleapis.com/icon?family=Material+Icons */
 @font-face {
-    font-family: 'Material Icons Round';
+    font-family: 'Material Icons';
     font-style: normal;
     font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/materialiconsround/v99/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmP.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/materialicons/v125/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
 }
