--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <html class="{{ g.theme }}">
 
 <head>
-    <title> sliva0.tk - {% block title -%}{%- endblock -%} </title>
+    <title> sliva0.tk - {% block title -%} {{ g.rpath.page_name }} {%- endblock -%} </title>
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
 
@@ -31,7 +31,6 @@
     <header>
         {{ m.link_button("Home", "/") }}
         {{ m.breadcrumbs() }}
-        <div class="push-right"></div>
         {{ m.link_button("Settings", "/settings") }}
         {{ m.invert_theme_button() }}
     </header>
