--- a/templates/macros.html
+++ b/templates/macros.html
@@ -32,7 +32,7 @@
 {%- else -%}
 <a 
     class="{{ class }}"
-    href="{{ g.breadcrumbs.path }}?type_light={{ invert_bool(g.type_light) }}"
+    href="{{ g.rpath.path }}?type_light={{ invert_bool(g.type_light) }}"
 >Aa</a>
 {%- endif -%}
 
@@ -49,7 +49,7 @@
 {%- else -%}
 <a
     class="{{ class }}"
-    href="{{ g.breadcrumbs.path }}?theme={{ theme }}&type_light={{ type_light }}"
+    href="{{ g.rpath.path }}?theme={{ theme }}&type_light={{ type_light }}"
 >Aa</a>
 {%- endif -%}
 
@@ -71,7 +71,7 @@
     <input type="checkbox" {{ checked }}>
     <a
         class="button slider"
-        href="{{ g.breadcrumbs.path }}?{{ option }}={{ invert_bool(g[option]) }}"
+        href="{{ g.rpath.path }}?{{ option }}={{ invert_bool(g[option]) }}"
     ></a>
 
 {%- endif -%}
@@ -84,11 +84,11 @@
 {%- macro breadcrumbs() -%}
 
 <div class="breadcrumbs">
-    {%- for name, link in g.breadcrumbs.links -%}
+    {%- for name, link in g.rpath.breadcrumbs_links -%}
         {{- " / " -}}
         {%- if not loop.last -%}
             <a href="{{ link }}">{{ name }}</a>
-        {%- elif g.breadcrumbs.is_not_found -%}
+        {%- elif g.rpath.is_not_found -%}
             <s>{{ name }}</s>
         {%- else -%}
             {{ name }}
@@ -128,12 +128,19 @@
 
 
 
-{%- macro folder_file_list(display_suffixes=False) -%}
+{%- macro folder_file_list(source_mode=False) -%}
 
 <div class="centered">
     <div>
+    {%- if source_mode -%}
+        <div class="line-block">
+            {{- icon("drive_file_move_rtl", FOLDER_EMOJI) -}}
+            <a href="{{ g.rpath.parent }}"> .. </a>
+        </div>
+    {%- endif -%}
+
     {%- for file in g.files -%}
-        {%- set name = file.name if display_suffixes else file.stem -%}
+        {%- set name = file.name if source_mode else file.stem -%}
 
         <div class="line-block">
             {%- if file.is_dir() -%}
@@ -142,10 +149,10 @@
                 {{ icon("description", FILE_EMOJI) }}
             {%- endif -%}
 
-            <a href="{{ g.breadcrumbs.path }}/{{ name }}"> {{- name -}} </a>
+            <a href="{{ g.rpath.path }}/{{ name }}">{{ name }}</a>
         </div>
     {%- endfor -%}
-</div>
+    </div>
 </div>
 
 {%- endmacro -%}
