--- a/templates/source_file.html
+++ b/templates/source_file.html
@@ -4,7 +4,7 @@
 <style>
     body {
         max-width: max-content;
-        min-width: min(40rem, 100%);
+        min-width: min(var(--body-width), 100%);
     }
 
     .highlight-block {
