add cool favicons

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/themes.css">
     <link rel="icon" type="image/vnd.microsoft.icon" href="/static/media/favicon.ico" />
+    <link rel="alternate icon" type="image/png" href="/static/media/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="/static/media/favicon.svg">
 
     <link {{ o('fonts') }} rel="stylesheet" type="text/css" href="/static/css/fonts.css">
     <link {{ o('use_hl') }} rel="stylesheet" type="text/css" href="/static/css/highlight.css">
