--- a/static/css/highlight.css
+++ b/static/css/highlight.css
@@ -1,83 +1,38 @@
+/* COLORS OF OTHER HIGHLIGHT ELEMENTS */
+
 .highlight-block {
     color: #def;
     background-color: #777;
-
-    border-radius: 0.4rem;
-    padding: 0.2rem;
-    margin: 0 1rem;
-
-    display: flex;
-    max-width: fit-content;
-    align-self: stretch;
-    position: relative;
-}
-
-.highlight-block * {
-    color: inherit;
-    border-radius: inherit;
-    background-color: inherit;
-}
-
-.highlight-block pre {
-    margin: 0;
-    padding: 0.5rem 0.15rem 0.5rem 0;
-}
-
-.highlight-block>pre {
-    cursor: default;
-    user-select: none;
-}
-
-.highlight {
-    padding: 0 0.5rem;
-    overflow-x: auto;
-    scrollbar-width: thin;
 }
 
 .highlight pre {
     border-left-color: #666;
-    border-radius: 0;
-    border-left-width: 0.1rem;
-    border-left-style: solid;
-
-    padding: 0.5rem 0.3rem;
 }
 
 .copy-button {
     background: #ddd0;
     color: #A9B7C6;
-
-    font-family: 'Material Icons', monospace;
-    font-size: 18px;
-    user-select: none;
-    cursor: pointer;
-    
-    margin: 0.3rem;
-    padding: 0.1rem;
-    position: absolute;
-    top: 0;
-    right: 0;
 }
 
 .copy-button:hover {
-    background: #ddd6;
+    background: #ddd4;
 }
 
 .copy-button:active {
     background: #ddd2;
 }
 
-
-.highlight::-webkit-scrollbar {
-    height: 0.4rem;
+.copy-tooltip {
+    background-color: #444;
+    color: #def;
+    border-color: #888;
 }
 
-.highlight::-webkit-scrollbar-track {
-    margin-inline: 0.4rem;
+span.copy-tooltip::after {
+    border-top-color: #444;
 }
 
 .highlight::-webkit-scrollbar-thumb {
-    border-radius: 1rem;
     background: #def;
 }
 
@@ -86,7 +41,7 @@
 }
 
 
-/* Source: https://github.com/kakawait/pygments-darcula/blob/master/darcula.css */
+/* Source of the rest of the file: https://github.com/kakawait/pygments-darcula/blob/master/darcula.css */
 
 /* ----[ BASE ]---- */
 
